2003-02-13  Kim F. Storm  <storm@cua.dk>

	* search.c (Fmatch_data): Doc fix.  Explicitly state that
	match-data is undefined if last search failed.

	* keymap.c (Fcommand_remapping): Renamed from Fremap_command.
	All uses changed.

2003-02-12  Juanma Barranquero  <lektu@terra.es>

	* eval.c (Fdefmacro): Fix typo.

2003-02-12  Kim F. Storm  <storm@cua.dk>

	* macros.c (Fstart_kbd_macro): If appending, and last keyboard
	macro is a string, convert meta modifiers in string when copying
	the string into a vector.

2003-02-11  Kim F. Storm  <storm@cua.dk>

	* keymap.c (Fremap_command): Return nil if arg is not a symbol.

2003-02-11  Kenichi Handa  <handa@m17n.org>

	* Makefile.in (lisp, shortlisp): Add malayalam.el and tamil.el.

2003-02-10  Kim F. Storm  <storm@cua.dk>

	* process.c: Doc fixes.
	(syms_of_process): Add `:' prefix to QCfilter_multibyte.

2003-02-10  Kenichi Handa  <handa@m17n.org>

	* fns.c (Fstring_to_multibyte): Fix typo in the docstring.

	* process.c (QCfilter_multibyte): New variable.
	(setup_process_coding_systems): New function.
	(Fset_process_buffer, Fset_process_filter): Call
	setup_process_coding_systems.
	(Fstart_process): Initialize the member `filter_multibyte' of
	struct Lisp_Process.
	(create_process): Call setup_process_coding_systems.
	(Fmake_network_process): New keyward `:filter-multibyte'.
	Initialize the member `filter_multibyte' of struct Lisp_Process.
	Call setup_process_coding_systems.
	(server_accept_connection): Call setup_process_coding_systems.
	(read_process_output): If the process has a filter, decide the
	multibyteness of a string to given to the filter by
	`filter_multibyte' member of the process.  If the process doesn't
	have a filter and the result of conversion is unibyte, use
	Fstring_to_multibyte (not Fstring_make_multibyte) to get the
	multibyte form.
	(Fset_process_coding_system): Call setup_process_coding_systems.
	(Fset_process_filter_multibyte): New function.
	(Fprocess_filter_multibyte_p): New function.